--- a/MyFirstProject/index2.html
+++ b/MyFirstProject/index2.html
@@ -106,6 +106,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#certificates">Certificates</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#resume">Resume</a></li>
            
@@ -145,6 +146,17 @@
                 <li>Java script</li>
             </ul>
         </div>
+    </section>
+    <section>
+        <div class="section-content">
+            <h2>Certificates</h2>
+            <ul>
+                <li>70 + Courses Completed in Coursera</li>
+                <li>International Hackathon in Quantum (iQHack) at MIT</li>
+                <li>Finalist in AWS Deep Racer 3.0 2024</li>
+                <li>Best Idea in Hack Beyond Limits 2025</li>
+                <li>Completed 100% Certificates in UIPath.</li>
+            </ul>
     </section>
 
     <section id="projects">
