--- a/MyFirstProject/index2.html
+++ b/MyFirstProject/index2.html
@@ -106,8 +106,9 @@
             <li><a href="#about">About</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#certificates">Certificates</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#resume">Resume</a></li>
+                      <li><a href="#resume">Resume</a></li>
            
         </ul>
     </nav>
@@ -143,6 +144,18 @@
                 <li>java</li>
                 <li>c++</li>
                 <li>Java script</li>
+            </ul>
+        </div>
+    </section>
+    <section>
+        <div class="section-content">
+            <h2>Certificates</h2>
+            <ul>
+                <li>70 + Coursera Certificates</li>
+                <li>International Hackathon in Quantum (iQHack) at MIT</li>
+                <li>Finalist in AWS Deep Racer 3.0 2024</li>
+                <li>Best Idea in Hack Beyond Limits 2025</li>
+                <li>Completed 100% Certificates in UIPath.</li>
             </ul>
         </div>
     </section>
